<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/peek_transit_lockscreen_widget_layout"
    >

    <!-- User location coordinates -->
    <LinearLayout
        android:id="@+id/peek_transit_lockscreen_widget_user_location_coordinates_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/peek_transit_lockscreen_widget_user_location_coordinates_text_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user_location_coordinates_text_image" />

    </LinearLayout>

    <!-- ===== BUS STOP 1 ===== -->
    <LinearLayout
        android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingHorizontal="8dp"
        android:paddingTop="18dp"
        android:paddingBottom="0dp"
    >

        <LinearLayout
            android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_title_text_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bus_stop_1_title_text_image"
            />

        </LinearLayout>

        <!-- Schedule Entry 1 -->
        <LinearLayout
            android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_1_route_number_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:contentDescription="@string/bus_stop_1_schedule_entry_1_route_number_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_1_route_name_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:contentDescription="@string/bus_stop_1_schedule_entry_1_route_name_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_1_status_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:contentDescription="@string/bus_stop_1_schedule_entry_1_status_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_1_arrival_time_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:contentDescription="@string/bus_stop_1_schedule_entry_1_arrival_time_text_image" />
        </LinearLayout>

        <!-- Schedule Entry 2 -->
        <LinearLayout
            android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_2_route_number_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:contentDescription="@string/bus_stop_1_schedule_entry_2_route_number_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_2_route_name_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:contentDescription="@string/bus_stop_1_schedule_entry_2_route_name_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_2_status_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:contentDescription="@string/bus_stop_1_schedule_entry_2_status_text_image" />

            <ImageView
                android:id="@+id/peek_transit_lockscreen_widget_bus_stop_1_schedule_entry_2_arrival_time_text_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="45"
                android:contentDescription="@string/bus_stop_1_schedule_entry_2_arrival_time_text_image" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:weightSum="1"
        android:id="@+id/peek_transit_lockscreen_widget_last_updated_status_layout"
        >
        <ImageView
            android:id="@+id/peek_transit_lockscreen_widget_last_updated_status_text_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/last_updated_status_text_image"  />

    </LinearLayout>

</LinearLayout>
