<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="100"
    android:background="@color/surface"
    android:id="@+id/peek_transit_large_widget_initial_layout"
>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/peek_transit_logo"
        android:src="@mipmap/ic_launcher_round"
        android:layout_weight="20"
    />

    <Button
        android:id="@+id/configure_large_widget_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configure"
        android:textColor="@color/onPrimary"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:background="@drawable/round_corners"
        android:backgroundTint="@color/primary"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_widget_configuration_to_get_started"
        android:textSize="12sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/onBackground"
        android:layout_weight="20"
        android:paddingHorizontal="50dp"
    />


</LinearLayout>